crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::duplicate_definitions::test_multiple_duplicates.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::duplicate_definitions::test_multiple_duplicates"
---
Fixture: lib::scoping::duplicate_definitions::test_multiple_duplicates
============================================================
Source code:

        func test() {
            let x = 1;
            let y = 2;
            let x = 3; // First duplicate
            let y = 4; // Second duplicate
        }
    
============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'x'
   ╭─[ lib::scoping::duplicate_definitions::test_multiple_duplicates:5:17 ]
   │
 5 │             let x = 3; // First duplicate
   │                 ┬  
   │                 ╰── Duplicate definition of 'x'
───╯

--- Diagnostic 2 ---
[1003] Error: Duplicate definition of 'y'
   ╭─[ lib::scoping::duplicate_definitions::test_multiple_duplicates:6:17 ]
   │
 6 │             let y = 4; // Second duplicate
   │                 ┬  
   │                 ╰── Duplicate definition of 'y'
───╯

--- Diagnostic 3 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::duplicate_definitions::test_multiple_duplicates:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
