crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::duplicate_definitions::test_simple_duplicate_variable.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::duplicate_definitions::test_simple_duplicate_variable"
---
Fixture: lib::scoping::duplicate_definitions::test_simple_duplicate_variable
============================================================
Source code:

        func test() {
            let x = 1;
            let x = 2; // Duplicate definition
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1003] Error: Duplicate definition of 'x'
   ╭─[ lib::scoping::duplicate_definitions::test_simple_duplicate_variable:4:17 ]
   │
 4 │             let x = 2; // Duplicate definition
   │                 ┬  
   │                 ╰── Duplicate definition of 'x'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::duplicate_definitions::test_simple_duplicate_variable:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
