crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::scope_visibility::test_if_statement_scope.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::scope_visibility::test_if_statement_scope"
---
Fixture: lib::scoping::scope_visibility::test_if_statement_scope
============================================================
Source code:

        func test() {
            if (true) {
                let if_var = 42;
            }
            let bad = if_var; // Error: if_var not visible outside if
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'if_var'
   ╭─[ lib::scoping::scope_visibility::test_if_statement_scope:6:23 ]
   │
 6 │             let bad = if_var; // Error: if_var not visible outside if
   │                       ───┬──  
   │                          ╰──── Undeclared variable 'if_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::scope_visibility::test_if_statement_scope:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
